# Steel_RFP_Form_Recognizer

./: README.md  form_recognizer.py  form_recognizer_custom.py  format_stevenson.py  parameters.yaml  pyproject.toml
data/: .gitignore  h_and_k_rental.csv  others.csv  processed_stevenson.csv  stevenson.csv  sunbelt_rental.csv  united_rental.csv
us_steel_rfp/: pyvenv.cfg
